feat(encryption): rebase and add code
